--- a/index.html
+++ b/index.html
@@ -20,46 +20,62 @@
         </div>
     </header>
     <main class="container Product-collecter">
-        <div class="Product-box">
-            <img src="img/1.png" alt="">
-            <h3>LD01 LOUNGE CHAIR</h3>
-            <p>$200</p>
-        </div>
-        <div class="Product-box">
-            <img src="img/2.png" alt="">
-            <h3>LD02 LOUNGE CHAIR</h3>
-            <p>$200</p>
-        </div>
-        <div class="Product-box">
-            <img src="img/3.png" alt="">
-            <h3>LD03 LOUNGE CHAIR</h3>
-            <p>$200</p>
-        </div>
-        <div class="Product-box">
-            <img src="img/4.png" alt="">
-            <h3>LD04 LOUNGE CHAIR</h3>
-            <p>$200</p>
-        </div>
-        <div class="Product-box">
-            <img src="img/5.png" alt="">
-            <h3>LD05 LOUNGE CHAIR</h3>
-            <p>$200</p>
-        </div>
-        <div class="Product-box">
-            <img src="img/6.png" alt="">
-            <h3>LD06 LOUNGE CHAIR</h3>
-            <p>$200</p>
-        </div>
-        <div class="Product-box">
-            <img src="img/7.png" alt="">
-            <h3>LD07 LOUNGE CHAIR</h3>
-            <p>$200</p>
-        </div>
-        <div class="Product-box">
-            <img src="img/8.png" alt="">
-            <h3>LD08 LOUNGE CHAIR</h3>
-            <p>$200</p>
-        </div>
+        <a href="Product_detail1.html">
+            <div class="Product-box">
+                <img src="img/1.png" alt="">
+                <h3>LD01 LOUNGE CHAIR</h3>
+                <p>$200</p>
+            </div>
+        </a>
+        <a href="Product_detail2.html">
+            <div class="Product-box">
+                <img src="img/2.png" alt="">
+                <h3>LD02 LOUNGE CHAIR</h3>
+                <p>$200</p>
+            </div>
+        </a>
+        <a href="Product_detail3.html">
+            <div class="Product-box">
+                <img src="img/3.png" alt="">
+                <h3>LD03 LOUNGE CHAIR</h3>
+                <p>$200</p>
+            </div>
+        </a>
+        <a href="Product_detail4.html">
+            <div class="Product-box">
+                <img src="img/4.png" alt="">
+                <h3>LD04 LOUNGE CHAIR</h3>
+                <p>$200</p>
+            </div>
+        </a>
+        <a href="Product_detail5.html">
+            <div class="Product-box">
+                <img src="img/5.png" alt="">
+                <h3>LD05 LOUNGE CHAIR</h3>
+                <p>$200</p>
+            </div>
+        </a>
+        <a href="Product_detail6.html">
+            <div class="Product-box">
+                <img src="img/6.png" alt="">
+                <h3>LD06 LOUNGE CHAIR</h3>
+                <p>$200</p>
+            </div>
+        </a>
+        <a href="Product_detail7.html">
+            <div class="Product-box">
+                <img src="img/7.png" alt="">
+                <h3>LD07 LOUNGE CHAIR</h3>
+                <p>$200</p>
+            </div>
+        </a>
+        <a href="Product_detail8.html">
+            <div class="Product-box">
+                <img src="img/8.png" alt="">
+                <h3>LD08 LOUNGE CHAIR</h3>
+                <p>$200</p>
+            </div>
+        </a>
     </main>
 </body>
 </html>
